# MultiProdigy

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  base.py  config.py  config.yaml.example  factory.py  github_manager.py  llm.base.py  main.py  models.py  plugins.dummy.py  plugins.py  pyproject.toml  registry.py  requirement.txt  requirements.txt  setup.py  test_dummy_client.py  test_factory.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  setup_repo.yml  stale.yml
MultiProdigy/agents/: memory_agent.py  task_manager_agent.py
MultiProdigy/config/: config.py
MultiProdigy/llm/: base.py  clients.py  factory.py  huggingface_client.py
ai_agent_framework.egg-info/: PKG-INFO  SOURCES.txt
core_engine/: agent_base.py  agents.py  api.py  bus.py  config.py  config_model.py  demo.py  echo_agent.py  error.py  health.py  logging.py  message.py  metrics.py  models.py  plugins.py  registry.py  runtime.py  scheduler.py  schemas.py  test_agents.py  user_agent.py
demo/: demo.py  echo_agent.py  hello_agent.py  llm_demo.py  user_agent.py
docs/: architecture.md  getting_started.md  index.md  llm.md  modules_reference.md  sample_agent_demo.md
docs/integration/: LLM Plugin Registry System
prodigal_agent/bus/: bus.py  (+1 more)
schemas/: agent_config.py
scripts/: setup_repo.py
tests/: test_agent_base.py  test_bus.py  test_echo_agent.py  test_memory_agent.py  test_message_schema.py  test_task_manager_agent.py  test_user_agent.py  tests_message_bus.py  tests_ollama_agent.py
(+21 files in other folders)
